remove a few code smells